# TenderIQ

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  DESIGN.md  GELISTIRME_PLANI.md  README.md  TenderIQ_ClaudeCode_Skills.md  TenderIQ_Proje_Plani.docx  alembic.ini  conftest.py  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/tenderiq_api/: __init__.py  dependencies.py  errors.py  main.py  middleware.py  queueing.py  schemas.py
apps/api/src/tenderiq_api/routers/: __init__.py  health.py
apps/api/src/tenderiq_api/routers/v1/: __init__.py  auth.py  billing.py  capability_profile.py  documents.py  export.py  findings.py  invitations.py  jobs.py  members.py  system.py  tenders.py  usage.py
apps/api/tests/: conftest.py  test_client_ip.py  test_errors.py  test_health.py
apps/api/tests/integration/: test_auth_account_flow.py  test_auth_flow.py  test_auth_refresh_flow.py  test_billing_flow.py  test_invitations_flow.py  test_org_members_flow.py  test_review_flow.py  test_tender_flow.py  test_upload_pipeline_flow.py  test_usage_flow.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs
apps/web/src/: instrumentation-client.ts  instrumentation.ts  middleware.ts
apps/web/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/capability/: page.tsx
apps/web/src/app/(app)/settings/: page.tsx
apps/web/src/app/(app)/tenders/: page.tsx
apps/web/src/app/(app)/tenders/[id]/: page.tsx
apps/web/src/app/(app)/tenders/[id]/review/: page.tsx
apps/web/src/app/(app)/usage/: page.tsx
apps/web/src/app/accept-invitation/: page.tsx
apps/web/src/app/api/session/: route.ts
apps/web/src/app/api/session/accept-invitation/: route.ts
apps/web/src/app/api/session/switch-org/: route.ts
apps/web/src/app/api/v1/[...path]/: route.ts
apps/web/src/app/forgot-password/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/app/tenders/: page.tsx
apps/web/src/app/tenders/[id]/: page.tsx
apps/web/src/app/verify-email/: page.tsx
apps/web/src/components/: providers.tsx  status-pill.tsx  system-status.tsx
apps/web/src/components/review/: edit-finding-dialog.tsx  export-dialog.tsx  finding-comments-dialog.tsx  finding-history-dialog.tsx  pdf-viewer.tsx  use-finding-review.ts
apps/web/src/components/settings/: account-section.tsx  invitations-section.tsx  members-section.tsx
apps/web/src/components/shell/: app-shell.tsx  page-header.tsx
apps/web/src/components/ui/: button.tsx  card.tsx
apps/web/src/lib/: api.ts  findings.ts  tender-stream.ts  utils.ts
apps/web/src/lib/server/: backend.ts  session.ts
apps/worker/: pyproject.toml
apps/worker/src/tenderiq_worker/: __init__.py  celery_app.py  db.py  extraction.py  indexing.py  parsing.py
apps/worker/src/tenderiq_worker/tasks/: __init__.py  documents.py  system.py
apps/worker/tests/: test_extraction.py  test_tasks.py
docs/adr/: 0001-monorepo.md  0002-pgvector.md  0003-rls-multi-tenancy.md  0004-hybrid-parsing.md  0005-langgraph-orchestration.md  0008-bge-m3-embedding.md  0009-fastapi-celery.md  0010-typed-api-contract.md  0011-ocr-engine.md  0012-hybrid-retrieval-rerank.md  README.md
e2e/: review-export.spec.ts
evals/: README.md  run_eval.py
evals/golden/sample/: ornek-sartname.json
evals/predictions/sample/: ornek-sartname.json
evals/tests/: conftest.py  test_run_eval.py
infra/compose/: docker-compose.yml
infra/compose/initdb/: 10-app-role.sql
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
migrations/: env.py
migrations/versions/: 0001_pgvector.py  0002_core_schema.py  0003_document.py  0004_job_audit_log.py  0005_parsed_element.py  0006_chunk_embedding.py  0007_requirement_deliverable.py  0008_risk_timeline_compliance.py  0009_review_workflow.py  0010_billing.py  0011_email_verified.py  0012_invitation.py
scripts/: export_openapi.py  faz1_gate_check.py  faz2_gate_check.py  parsing_spike.py  seed_e2e.py
