[project]
name = "tenderiq"
version = "0.0.0"
description = "TenderIQ — AI destekli ihale/RFP analiz platformu (monorepo kökü)"
requires-python = ">=3.12"
dependencies = [
    "tenderiq-core",
    "tenderiq-api",
    "tenderiq-worker",
]

# Kök, kurulabilir bir paket değildir; yalnızca workspace çapasıdır (virtual project).
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "apps/api", "apps/worker"]

[tool.uv.sources]
tenderiq-core = { workspace = true }
tenderiq-api = { workspace = true }
tenderiq-worker = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.8.0",
]
# Hibrit parsing yığını (§6.2, ADR-0004) — ağır/opsiyonel; `uv sync --group parsing`
# ile kurulur. Asıl bağımlılıklar packages/core'un `parsing` extra'sındadır
# (docling+pypdf); reportlab yalnızca test PDF'i üretimi içindir. Worker imajı bu
# grupla + `ocr` grubuyla kurulur (infra/docker/worker.Dockerfile).
parsing = [
    "tenderiq-core[parsing]",
    "reportlab>=4.2.0",
]
# OCR motoru (EasyOCR, ADR-0011): taranmış yol için; ayrı grup çünkü dijital-yol
# geliştirmesi bunu gerektirmez. Kurulum: `uv sync --group parsing --group ocr`.
ocr = [
    "tenderiq-core[ocr]",
]
# Embedding yığını (BGE-M3 / sentence-transformers, ADR-0008): indexing fazı
# yalnız worker'da koşar; API imajı bu grubu kurmaz.
embedding = [
    "tenderiq-core[embedding]",
]

# ── Ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "C4", "PT", "SIM", "RUF"]
# RUF001-003: Türkçe metindeki "ambiguous unicode" uyarıları (ı, İ, ş, ç...) —
# proje dili Türkçe olduğundan bilinçli olarak kapatıldı.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["tenderiq_core", "tenderiq_api", "tenderiq_worker"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106"]
"**/conftest.py" = ["S105", "S106"]

# ── Mypy (strict) ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = ["packages/core/src", "apps/api/src", "apps/worker/src"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "boto3.*",
    "botocore.*",
    "docling.*",
    "docling_core.*",
    "langfuse.*",
    "pgvector.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

# Celery'nin @task dekoratörü tipsizdir; task modüllerinde bu kuralı gevşetiriz.
[[tool.mypy.overrides]]
module = ["tenderiq_worker.tasks.*"]
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps", "evals"]
addopts = "-q --strict-markers --import-mode=importlib -m 'not integration'"
# Tek bir test asılı kalırsa (ör. kapanmayan SSE akışı) koşuyu saatlerce bloke etmesin.
timeout = 300
timeout_method = "thread"
markers = [
    "integration: gerçek servis (Docker/testcontainers) gerektiren testler",
]
